<resources>
    <string name="app_name">Food Hunter!</string>
    <string name="title_activity_show_map">Map</string>
    <string name="b_find_place_for_name">Find place for name</string>
    <string name="b_find_food_for_name">Find food for name</string>
    <string name="b_find_place_for_name_nearby">Find place for name nearby</string>
    <string name="b_find_food_for_name_nearby">Find food for name nearby</string>
    <string name="search_line">Enter the name of place or dish…</string>

    <string name="bc_find_place_for_name">onFindPlaceForNameClick</string>
    <string name="bc_find_food_for_name">onFindFoodForNameClick</string>
    <string name="bc_find_place_for_name_nearby">onFindPlaceForNameNearbyClick</string>
    <string name="bc_find_food_for_name_nearby">onFindFoodForNameNearbyClick</string>
    <string name="no_result">No results found.</string>
    <string name="title_activity_show_on_map">Map</string>
    <string name="b_show_all_places">Show all places</string>
    <string name="b_add_new_place">Add new place</string>

    <string name="m_incorrect_coordinates">Incorrect coordinates.</string>
    <string name="m_need_access_location">Need access to current location.</string>
    <string name="m_incorrect_price">Incorrect price.</string>

    <string name="map_user_location">You are here.</string>
    <string name="empty"></string>
    <string name="t_place_rate_index">" people rated this place"</string>
    <string name="t_food_rate_index">" people rated this dish"</string>

    <string name="login">Login</string>
    <string name="b_sign_in">registrate</string>
    <string name="t_enter_username">Enter your login.</string>
    <string name="b_view_history">view query history</string>
    <string name="t_history">History:</string>
    <string name="no_connection">"No internet connection."</string>
    <string name="already_rated">Already rated.</string>
    <string name="already_reviewed">Already reviewed.</string>
    <string name="incorrect_login">"Incorrect login"</string>
    <string name="m_no_access">No access to current location.</string>
</resources>
